--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </form>
 
     <h2>Resumo</h2>
-    <p class="placeholder">Escolha um shorts para resumir</p>
+    <p class="placeholder" id="content">Escolha um shorts para resumir</p>
   </div>
   <script type="module" src="web/main.js"></script>
   <script src="https://unpkg.com/@phosphor-icons/web"></script>
